sendTo Func Added

--- a/Immigrants/Base.lproj/Main.storyboard
+++ b/Immigrants/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udV-Rv-RZx">
-                                <rect key="frame" x="75" y="261" width="225" height="91"/>
+                                <rect key="frame" x="80" y="196" width="225" height="220"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="Send Alet">
@@ -42,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-537" y="367"/>
+            <point key="canvasLocation" x="-538.39999999999998" y="366.56671664167919"/>
         </scene>
         <!--Subscribe-->
         <scene sceneID="Hvn-E9-YaG">
